@@ -10,7 +10,11 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.*;
 
 @RequiredArgsConstructor
 @Service
@@ -40,8 +44,8 @@ public class ActivityAIServiceImpl implements ActivityAIService {
                     .path("text");
 
             String jsonContent = textNode.asText()
-                    .replaceAll("```json\\n","")
-                    .replaceAll("\\n```","")
+                    .replaceAll("```json\\n", "")
+                    .replaceAll("\\n```", "")
                     .trim();
 
 //            log.info("RESPONSE FROM CLEANED AI {} ", jsonContent);
@@ -77,31 +81,118 @@ public class ActivityAIServiceImpl implements ActivityAIService {
 
     @Override
     public Recommendation createDefaultRecommendation(Activity activity) {
-        return null;
+        return Recommendation.builder()
+                .activityId(activity.getId())
+                .userId(activity.getUserId())
+                .type(activity.getType().toString())
+                .recommendation("Unable to generate detailed analysis")
+                .improvements(Collections.singletonList("Continue with your current routine"))
+                .suggestions(Collections.singletonList("Consider consulting a fitness consultant"))
+                .safety(Arrays.asList(
+                        "Always warm up before exercise",
+                        "Stay hydrated",
+                        "Listen to your body"
+                ))
+                .createdAt(LocalDateTime.now())
+                .build();
     }
 
     @Override
     public List<String> extractSafetyGuidelines(JsonNode safetyNode) {
-        return List.of();
+        List<String> safety = new ArrayList<>();
+        if (safetyNode.isArray()) {
+            safetyNode.forEach(item -> safety.add(item.asText()));
+        }
+        return safety.isEmpty() ?
+                Collections.singletonList("Follow general safety guidelines") :
+                safety;
     }
 
     @Override
     public List<String> extractSuggestions(JsonNode suggestionsNode) {
-        return List.of();
+        List<String> suggestions = new ArrayList<>();
+        if (suggestionsNode.isArray()) {
+            suggestionsNode.forEach(suggestion -> {
+                String workout = suggestion.path("workout").asText();
+                String description = suggestion.path("description").asText();
+                suggestions.add(String.format("%s: %s", workout, description));
+            });
+        }
+        return suggestions.isEmpty() ?
+                Collections.singletonList("No specific suggestions provided") :
+                suggestions;
     }
 
     @Override
     public List<String> extractImprovements(JsonNode improvementsNode) {
-        return List.of();
+        List<String> improvements = new ArrayList<>();
+        if (improvementsNode.isArray()) {
+            improvementsNode.forEach(improvement -> {
+                String area = improvement.path("area").asText();
+                String detail = improvement.path("recommendation").asText();
+                improvements.add(String.format("%s: %s", area, detail));
+            });
+        }
+        return improvements.isEmpty() ?
+                Collections.singletonList("No specific improvements provided") :
+                improvements;
+
     }
 
+
+    //    "overall": "This was an excellent"
+    // Overall: This was an excellent
     @Override
     public void addAnalysisSection(StringBuilder fullAnalysis, JsonNode analysisNode, String key, String prefix) {
-
+        if (!analysisNode.path(key).isMissingNode()) {
+            fullAnalysis.append(prefix)
+                    .append(analysisNode.path(key).asText())
+                    .append("\n\n");
+        }
     }
 
     @Override
     public String createPromptForActivity(Activity activity) {
-        return "";
+        return String.format("""
+                        Analyze this fitness activity and provide detailed recommendations in the following EXACT JSON format:
+                        {
+                          "analysis": {
+                            "overall": "Overall analysis here",
+                            "pace": "Pace analysis here",
+                            "heartRate": "Heart rate analysis here",
+                            "caloriesBurned": "Calories analysis here"
+                          },
+                          "improvements": [
+                            {
+                              "area": "Area name",
+                              "recommendation": "Detailed recommendation"
+                            }
+                          ],
+                          "suggestions": [
+                            {
+                              "workout": "Workout name",
+                              "description": "Detailed workout description"
+                            }
+                          ],
+                          "safety": [
+                            "Safety point 1",
+                            "Safety point 2"
+                          ]
+                        }
+                        
+                        Analyze this activity:
+                        Activity Type: %s
+                        Duration: %d minutes
+                        Calories Burned: %d
+                        Additional Metrics: %s
+                        
+                        Provide detailed analysis focusing on performance, improvements, next workout suggestions, and safety guidelines.
+                        Ensure the response follows the EXACT JSON format shown above.
+                        """,
+                activity.getType(),
+                activity.getDuration(),
+                activity.getCaloriesBurned(),
+                activity.getAdditionalMetrics()
+        );
     }
 }
